上传 v2.0.0 的typescript代码

--- a/.gitignore
+++ b/.gitignore
@@ -19,16 +19,7 @@ target/
 *.iml
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-
-### VS Code ###
-.vscode/
-
+### front ###
+**/dist
 **/node_modules
 
