--- a/smart-admin-api/sa-parent/pom.xml
+++ b/smart-admin-api/sa-parent/pom.xml
@@ -270,7 +270,7 @@
                 <directory>src/main/resources</directory>
                 <excludes>
                     <exclude>dev/*</exclude>
-                    <exclude>sit/*</exclude>
+                    <exclude>test/*</exclude>
                     <exclude>pre/*</exclude>
                     <exclude>prod/*</exclude>
                 </excludes>
